--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "express-session": "^1.17.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.16.1",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "session-file-store": "^1.5.0",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
